--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,26 +1,29 @@
 {
     "compilerOptions": {
-        "target": "ES2022",
-        "module": "ESNext",
-        "moduleResolution": "bundler",
         "allowImportingTsExtensions": true,
-        "noEmit": true,
-        "lib": ["ES2022"],
-        "strict": true,
-        "esModuleInterop": true,
-        "skipLibCheck": true,
-        "forceConsistentCasingInFileNames": true,
-        "resolveJsonModule": true,
         "allowJs": false,
+        "allowSyntheticDefaultImports": true,
         "declaration": true,
         "declarationMap": true,
-        "sourceMap": true,
-        "removeComments": true,
+        "erasableSyntaxOnly": true,
+        "esModuleInterop": true,
+        "forceConsistentCasingInFileNames": true,
+        "lib": ["ES2022"],
+        "module": "NodeNext",
+        "moduleResolution": "NodeNext",
+        "noFallthroughCasesInSwitch": true,
+        "noImplicitReturns": true,
         "noUnusedLocals": true,
         "noUnusedParameters": true,
-        "noImplicitReturns": true,
-        "noFallthroughCasesInSwitch": true,
-        "allowSyntheticDefaultImports": true
+        "outDir": "./dist",
+        "removeComments": true,
+        "resolveJsonModule": true,
+        "rewriteRelativeImportExtensions": true,
+        "skipLibCheck": true,
+        "sourceMap": true,
+        "strict": true,
+        "target": "ES2022",
+        "verbatimModuleSyntax": true
     },
     "include": ["src/**/*"],
     "exclude": ["node_modules", "dist"]
