--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
         "@types/node": "24.2.1",
         "conventional-changelog-conventionalcommits": "8.0.0",
         "eslint": "9.33.0",
+        "jiti": "2.5.1",
         "prettier": "3.6.2",
         "semantic-release": "24.2.7",
         "tsx": "4.20.3",
